# pytac

./: .copier-answers.yml  .gitignore  .travis.yml  Dockerfile  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  catalog-info.yaml  codecov.yml  pyproject.toml  rtd-requirements.txt  setup.cfg  setup.py  switcher.json
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md  CONTRIBUTING.rst
.github/actions/install_requirements/: action.yml
.github/workflows/: ci.yml  code.yml
0.6.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.6.0.b1/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.6.0.b1/.doctrees/: environment.pickle
0.6.0.b1/.doctrees/developer/: index.doctree
0.6.0.b1/_modules/: index.html
0.6.0.b1/_modules/pytac/: cs.html  data_source.html  device.html  (+6 more)
0.6.0.b1/_static/: documentation_options.js
0.6.0.b1/developer/: index.html
0.6.0.b1/user/: index.html
0.6.0/.doctrees/: environment.pickle
0.6.0/_modules/: index.html
0.6.0/developer/: index.html
0.6.0/user/: index.html
0.6.1/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
0.6.1/.doctrees/: environment.pickle  index.doctree
0.6.1/_modules/: index.html
0.6.1/developer/: index.html
0.6.1/user/: index.html
0.6.2/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
0.6.2/.doctrees/: environment.pickle
0.6.2/_modules/: index.html
0.6.2/developer/: index.html
0.6.2/user/: index.html
0.7.0/: index.html  py-modindex.html  search.html
0.7.0/.doctrees/: environment.pickle  genindex.doctree
0.7.0/developer/: index.html
1.0.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
1.0.0/.doctrees/: environment.pickle
1.0.0/_modules/: index.html
1.0.0/developer/: index.html
1.0.0/user/: index.html
asyncio-conversion/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
asyncio-conversion/.doctrees/: environment.pickle  index.doctree
asyncio-conversion/_modules/: index.html
asyncio-conversion/_static/: documentation_options.js
asyncio-conversion/developer/: index.html
asyncio-conversion/user/: index.html
cothread_cs-wait/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
cothread_cs-wait/.doctrees/: environment.pickle  genindex.doctree
cothread_cs-wait/_modules/: index.html
cothread_cs-wait/_static/: documentation_options.js
cothread_cs-wait/developer/: index.html
cothread_cs-wait/user/: index.html
data/DIAD/: devices.csv  elements.csv  families.csv  uc_pchip_data.csv  uc_poly_data.csv  unitconv.csv
data/VMX/: devices.csv  elements.csv  families.csv
data/VMXSP/: devices.csv  elements.csv  uc_pchip_data.csv  uc_poly_data.csv
diamond2-conversion/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
diamond2-conversion/.doctrees/: environment.pickle
diamond2-conversion/_modules/: index.html
diamond2-conversion/_static/: documentation_options.js
diamond2-conversion/developer/: index.html
diamond2-conversion/user/: index.html
docs/: _api.rst  conf.py  developers.rst  examples.rst  index.rst  intro.rst  pytac.rst  reference.md
docs/explanations/: what-is-pytac.md
docs/tutorials/: basic-tutorial.rst
docs/user/: index.rst
fix-docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
fix-docs/.doctrees/: genindex.doctree  index.doctree
fix-docs/_modules/: index.html
fix-docs/_static/: documentation_options.js
fix-docs/developer/: index.html
fix-docs/user/: index.html
jupyter/: README.rst  README.txt  bpms.ipynb  print_bpms_with_position.ipynb  print_q1b_pv_names.ipynb  print_quad_pv_values.ipynb  tutorial.ipnb  tutorial.ipynb
main/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
main/.doctrees/: _api.doctree  environment.pickle  explanations.doctree  genindex.doctree  how-to.doctree  index.doctree  reference.doctree  tutorials.doctree
main/_api/: pytac.data_source.html  pytac.device.html  pytac.element.html  pytac.exceptions.html  pytac.html  pytac.lattice.html  pytac.load_csv.html  pytac.units.html  pytac.utils.html
main/_modules/: index.html
main/_static/: documentation_options.js
main/developer/: index.html
main/explanations/: decisions.html  what-is-pytac.html
main/how-to/: contribute.html
main/tutorials/: basic-tutorial.html  installation.html
main/user/: index.html
pytac/: __init__.py  caproto_cs.py  cothread_cs.py  cs.py  data_source.py  device.py  element.py  epics.py  exceptions.py  lattice.py  load_csv.py  model.py  pyepics_cs.py  units.py  utils.py
requirements/: conda.txt  dev.txt  local.txt  pip.txt
src/pytac/: __init__.py  __main__.py  aioca_cs.py  cothread_cs.py  cs.py  data_source.py  device.py  element.py  exceptions.py  lattice.py  load_csv.py  units.py  utils.py
test/: conftest.py  constants.py  test_control_system.py  test_cothread_cs.py  test_cs.py  test_data_source.py  test_device.py  test_element.py  test_epics.py  test_invalid_classes.py  test_lattice.py  test_load.py  test_machine.py  test_units.py  test_utils.py
tests/: conftest.py  constants.py  test_aioca_cs.py  test_cli.py  test_cothread_cs.py  test_data_source.py  test_device.py  test_element.py  test_epics.py  test_invalid_classes.py  test_lattice.py  test_load.py  test_machine.py  test_units.py
utils/: load_mml.m  load_unitconv.m
(+474 files in other folders)
