[metadata]
name = pytac
description = "Python Toolkit for Accelerator Controls"
url = https://github.com/dls-controls/pytac
author = Will Rogers
author_email = will.rogers@diamond.ac.uk
license = Apache License 2.0
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    numpy
    scipy

include_package_data = True
zip_safe = False

[options.packages.find]
# Don't include our tests directory in the distribution
exclude = test

[bdist_wheel]
universal=1

[mypy]
ignore_missing_imports = True

[flake8]
exclude = docs,build
# Make flake8 respect black's line length (default 88),
max-line-length = 88
extend-ignore =
    E203,  # See https://github.com/PyCQA/pycodestyle/issues/373

[tool:pytest]
# Run pytest with all our checkers, and don't spam us with massive tracebacks on error
addopts =
    --tb=native -vv --flake8 --black --mypy --cov=pytac --cov-report term --cov-report xml:cov.xml
